kubernetes/application/auth-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-service-ingress
  namespace: tomodachi-app
  annotations:
    # kubernetes.io/ingress.class: Kong -> annotation kubernetes versi lama

    konghq.com/strip-path: "false"
    konghq.com/protocols: "http,https"
spec:
  ingressClassName: kong # -> annotation kubernetes versi baru
  
  rules:
    - http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8000

          - path: /api/v1/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8000
          - path: /api/v1/profiles
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8000
          - path: /api/v1/interests
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8000
          - path: /api/v1/addresses
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8000
          - path: /api/v1/regions
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8000
